index.css
:root {
    --main-movement: 3;
}


body{
    background: rgb(186, 177, 177);
}

.parent{
   display: flex;
   flex-direction: column;
   padding-top: 30px;
   align-items: center;
   min-width: 100vw;
   min-height: 100vh;
   background-size: cover;
}

.container{
    height: 40%;
    width: 40%;
    background: white;
    border-radius: 5px;
}

.child-container{
   padding: 0 40px;
   display: flex;
   flex-direction: column;
   gap: 20px;
}

.heading{
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    text-align: center;
    background: rgb(56, 55, 55);
    color: white;
    border-radius: 5px;
    margin-top: 0px;
    top: 0;
}

.note{
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}


.user-input{
    display: flex;
    justify-content: space-between;
}  

.user-input>div{
    display: flex;
    flex-direction: column;
}

.user-input>div>label{
    color: rgb(39, 38, 38);
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    padding-bottom: 10px;
}

.user-input>div>input{
    padding:8px 20px;
    border-radius: 5px;
    border: none;
    outline: none;
    background: rgb(170, 169, 169);
}

.button{
    margin-top: 15px;
    display: flex;
    display: flex;
    align-items: center;
    justify-content: center;
}

.button>button{
    padding: 10px 30px;
    border-radius: 5px;
    border: none;
    width: 100%;
    color: white;
    background:rgb(56, 55, 55);
    text-align: center;
    font-weight: bold;
    cursor: pointer;
}


#newBuilding{
    width: 100vw;

     overflow-y: auto;
    margin-top: 50px;
    box-sizing: border-box;
    display: flex;
    /* flex-direction: column; */
    flex-direction: column-reverse;
}

#newBuilding>div{
    border: .1px solid rgb(37, 33, 33);
    height: 80px;
    display: flex;
    flex-direction: column;
    gap: 5px;
    justify-content: center;
}

#newBuilding>div>button{
    width: fit-content;
    height: fit-content;
    border-radius: 5px;
    border: none;
    cursor: pointer;
}

#newBuilding>div:first-child{
    display: flex;
    flex-direction: row;
    justify-content: start; 
    align-items: center;    
    gap: 40px;
}

.floor_lift{
     background: yellow;
     height: 80px;
     width: 60px;
     position: relative;
}


.liftsss{
    height: 80px;
    width: 60px;
    min-width: 60px;
    background: goldenrod;
    border: 1px solid rebeccapurple;
    
}



.opening-door{
    /* background-color: rgb(251, 250, 251); */
    border: 1px solid black;
    background: transparent;
}




.closing-door{
    background: goldenrod;
}

